# task-agent

./: .env.example  .gitignore  Makefile  config.default.json  file_service.py  langgraph.json  pyproject.toml  sync_skills.py
assets/teams-bot-app/: manifest.json
auth/: fetch_auth.py
memories/: email_triage.md  sync_memories.py  triage.md
prompts/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  sync_prompts.py
scripts/: delete_volume_path.py  factory_reset.sh  fetch_auth.py  inspect_lancedb.py  reset_heartbeat_cron.py  reset_prompts.sh  reset_skills.sh  reset_volume.sh  sync_skills.py  test_codex_oauth.py  test_memory_search.py
skills/: sync_skills.py
skills/arxiv-search/: SKILL.md  arxiv_search.py
skills/browser/: SKILL.md  save_kernel_auth.sh
skills/cloud-storage/: SKILL.md
skills/docx/: SKILL.md  ooxml.md
skills/gemini/: SKILL.md
skills/github/: SKILL.md
skills/google/: SKILL.md
skills/langgraph-api/: SKILL.md  runs-cancel.md  runs-create.md  runs-list.md  runs-stateless.md  store.md  threads-create.md  threads-delete.md  threads-get.md  threads-history.md  threads-search.md  threads-state.md  threads-update.md
skills/microsoft/: SKILL.md
skills/notion/: SKILL.md
skills/openai-image-gen/: SKILL.md
skills/openai-whisper-api/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md  html2pptx.md  html2pptx.tgz
skills/rclone/: SKILL.md
skills/slack/: SKILL.md
skills/task-intake/: SKILL.md
skills/teams/: SKILL.md
skills/trello/: SKILL.md
skills/weather/: SKILL.md
skills/xlsx/: SKILL.md
src/agent/: __init__.py  auth.py  claude_auth.py  codex_auth.py  config.py  create_deep_agent.py  cron_tools.py  file_service.py  graph.py  messaging.py  middleware.py  modal_backend.py  modal_setup.sh  skills_middleware.py  system_prompt.py  tool_wrapper.py  tools.py  triage_graph.py  triage_prompt.py  triage_schema.py  utils.py  (+1 more)
(+69 files in other folders)
