[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
description = "Deep agent for collaborative document editing"
requires-python = ">=3.10"
dependencies = [
    "deepagents",  # Added  
    "langgraph>=1.0.0a3",  # Updated version  
    "langchain>=1.0.0a10",  # Added  
    "langchain-anthropic>=0.1.23",  # Added  
    "langgraph-prebuilt>=0.7.0a2",  # Added  
    "python-dotenv>=1.0.1",  
    "langchain_openai>=0.1.23",  # Added  
    "tavily-python",  # Added
    ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "langgraph-cli[inmem]>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]