[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
description = "Deep agent for collaborative document editing"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.2",
    "langgraph>=1.0.1",
    "deepagents>=0.2.7",
    "deepagents_cli>=0.0.9",
    "langchain-anthropic>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain_openai>=1.0.1",
    "tavily-python>=0.7.12",
    ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "langgraph-cli[inmem]>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]